--- a/mainapp/templates/includes/inc_footer.html
+++ b/mainapp/templates/includes/inc_footer.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class=footer>
+    <footer>
+        <p>&copy; Все права защищены </p>
+    </footer>
+</div>
