--- a/mainapp/templates/includes/inc_menu.html
+++ b/mainapp/templates/includes/inc_menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class=container>
+    <div class="header">
+        <img src="/static/mainapp/img/logo.png" width="60px" alt="logo">
+        <ul class="menu">
+            <li><a href={% url 'main' %}>Главная</a></li>
+            <li><a href={% url 'products' %}>Каталог</a></li>
+            <li><a href={% url 'contacts' %}>Контакты</a></li>
+        </ul>
+    </div>
+</div>
