--- a/mainapp/templates/product_1420.html
+++ b/mainapp/templates/product_1420.html
@@ -1,29 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8">
+{% block title %}
     <title>ABB Tropos 1420</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-
-<body>
-    <div class=container>
-        <div class="header">
-            <img src="img/logo.png" width="60px" alt="logo">
-            <ul class="menu">
-                <li><a href="index.html">На главную</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
-            </ul>
-        </div>
-    </div>
+{% endblock %}
+{% block content %}
     <div>
         <hr>
         <h1>Базовая станция ABB Tropos 1420</h1>
         <div class="product_image">
-            <a href="img/tropos_6420.jpg" target="_blank">
-                <img src="img/tropos-1420-mesh-router.jpg" alt="ABB Tropos 1420" title="ABB Tropos 1420"></a>
+            <a href={% static "/mainapp/img/tropos_6420.jpg" %} target="_blank">
+                <img src={% static "/mainapp/img/tropos-1420-mesh-router.jpg" %} alt="ABB Tropos 1420" title="ABB Tropos 1420"></a>
         </div>
         <div class="product_button">
             <input type="button" value="Купить">
@@ -105,10 +92,4 @@
                 - 802.1q VLAN support (ESSID and IP based tagging)</p>
         </ul>
         <hr>
-    </div>
-    <div class="footer">
-        <footer>
-            <p>&copy; Все права защищены</p>
-        </footer>
-    </div>
-</body></html>
+    {% endblock %}
