--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -25,22 +25,24 @@
                 {% for link in links_menu %}
                     <li>
                         <a href={% url link.href %}
-                                   class="product_menu {% if request.resolver_match.url_name == link.href %}
-                           product_menu_active {% endif %}">{{ link.name }}</a>
+                                   class="product_menu {% if request.resolver_match.url_name == 'link.href' %}
+                           product_menu_active{% endif %}">{{ link.name }}</a>
                     </li>
                 {% endfor %}
             </ul>
         </div>
         <hr>
-        <h1>Магазин оборудования</h1>
-        <h3>Организация промышленной Mesh-сети</h3>
-        <hr>
-        <!-- Комментарий -->
-        <h2></h2>
-        <img src={% static '/mainapp/img/ABBTropos.jpg' %}>
-        <p><i><b>Приветственное сообщение на странице магазина</b></i><br> Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Unde, dignissimos!</p>
-        <hr>
+        <div>
+            <h1>Магазин оборудования</h1>
+            <h3>Организация промышленной Mesh-сети</h3>
+            <hr>
+            <!-- Комментарий -->
+            <h2></h2>
+            <img src={% static '/mainapp/img/ABBTropos.jpg' %}>
+            <p><i><b>Приветственное сообщение на странице магазина</b></i><br> Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Unde, dignissimos!</p>
+            <hr>
+        </div>
     </div>
 {% endblock %}
 
