--- a/mainapp/templates/product_4310.html
+++ b/mainapp/templates/product_4310.html
@@ -1,31 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8">
+{% block title %}
     <title>ABB Tropos 4310</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
+{% endblock %}
 
-<body>
-    <div class=container>
-        <div class="header">
-            <img src="img/logo.png" width="60px" alt="logo">
-            <ul class="menu">
-                <li><a href="index.html">На главную</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
-            </ul>
-        </div>
-    </div>
+{% block content %}
+
     <div>
         <hr>
         <h1>Абонентский модуль для подвижной техники</h1>
         <hr>
         <h3>ABB TropOS 4310-XA Mobile Mesh Router</h3>
         <div class="product_image">
-            <a href="img/router-4310-mesh.jpg" target="_blank">
-                <img src="img/router-4310-mesh.jpg" alt="ABB Tropos 4310" title="ABB Tropos 4310"></a>
+            <a href={% static "/mainapp/img/router-4310-mesh.jpg"%} target="_blank">
+                <img src={% static "/mainapp/img/router-4310-mesh.jpg"%} alt="ABB Tropos 4310" title="ABB Tropos 4310"></a>
         </div>
         <div class="product_button">
             <input type="button" value="Купить">
@@ -103,9 +92,4 @@
         </ul>
         <hr>
     </div>
-    <div class=footer>
-        <footer>
-            <p>&copy; Все права защищены</p>
-        </footer>
-    </div>
-</body></html>
+{% endblock %}
