--- a/mainapp/templates/product_6420.html
+++ b/mainapp/templates/product_6420.html
@@ -1,30 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Shop</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
+{% block title %}
+    <title>ABB Tropos 6420</title>
+{% endblock %}
 
-<body>
-    <div class="container">
-        <div class=header>
-            <img src="img/logo.png" width="60px" alt="logo">
-            <ul class="menu">
-                <li><a href="index.html">На главную</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
-            </ul>
-        </div>
-    </div>
+{% block content %}
+
+
     <div>
         <hr>
         <h1>Маршрутизатор Wi-Fi промышлeнный ABB Tropos 6420 </h1>
     </div>
     <div class="product_image">
-        <a href="img/tropos_6420.jpg" target="_blank">
-            <img src="img/tropos_6420.jpg" alt="ABB Tropos 6420" title="ABB Tropos 6420"></a>
+        <a href={% static "/mainapp/img/tropos_6420.jpg"%} target="_blank">
+            <img src={% static "/mainapp/img/tropos_6420.jpg"%} alt="ABB Tropos 6420" title="ABB Tropos 6420"></a>
     </div>
     <div class="product_button">
         <input type="button" value="Купить">
@@ -104,10 +94,4 @@
         </ul>
         <hr>
     </div>
-    <div class="footer">
-        <footer>
-            <p>&copy; Все права защищены</p>
-        </footer>
-    </div>
-
-</body></html>
+ {% endblock %}
