--- a/mainapp/static/mainapp/css/style.css
+++ b/mainapp/static/mainapp/css/style.css
@@ -49,12 +49,8 @@ b. Убрать маркеры списка.*/
 .menu a {
     text-decoration: none;
     font-size: 25px;
-    background-color:
+    background-color: #eee;
 }
-
-
-
-
 
 
 .product_menu {
@@ -77,7 +73,7 @@ b. Убрать маркеры списка.*/
 }
 
 .product_menu ul {
-     margin: 0 auto;
+    margin: 0 auto;
 
 
 }
@@ -95,9 +91,6 @@ b. Убрать маркеры списка.*/
 }
 
 
-
-
-
 .menu a:active {
     color: deeppink;
 }
@@ -113,7 +106,6 @@ li {
     font-size: 18px;
     font-weight: 400;
     background-color: #eaeaea;
-
 
 
 }
@@ -270,7 +262,34 @@ table tr:nth-child(1) {
     text-align: center
 }
 
+.product_list div li {
+    list-style: none;
+}
+
 .google_map iframe {
     width: 100%;
     height: 374px;
+}
+
+
+.components_menu {
+    text-align: center;
+
+}
+
+.components_menu_block {
+    display: inline-block;
+    padding-right: 40px;
+    text-align: center;
+}
+
+.components_menu_block li {
+    list-style: none;
+}
+
+.components_menu_block img {
+    outline: 1px solid;
+    outline-color: darkblue;
+    outline-style: solid;
+
 }
