--- a/mainapp/templates/includes/inc_components_menu.html
+++ b/mainapp/templates/includes/inc_components_menu.html
@@ -1,8 +1,11 @@
 <div class=components_menu>
-    <ul>
-        {% for product in products %}
-            <li>product.name<a {% include 'includes/inc_components_menu.html' %}</a></li>
-        {% endfor %}
+        <h3>Комплектующие</h3>
+        <ul>
+            {% for product in products %}
+                <div class=components_menu_block><img width="60" height="60" src="/media/{{ product.image }}" alt="{{ product.short_desc }}">
+                    <li><a  href="#" >{{ product.name }}</a></li>
+                </div>
+            {% endfor %}
 
-    </ul>
+        </ul>
 </div>
