--- a/mainapp/templates/includes/inc_menu.html
+++ b/mainapp/templates/includes/inc_menu.html
@@ -5,6 +5,21 @@
             <li><a href={% url 'main' %}>Главная</a></li>
             <li><a href={% url 'products' %}>Каталог</a></li>
             <li><a href={% url 'contacts' %}>Контакты</a></li>
+            {% if user.is_authenticated %}
+               {% comment %} <li>
+                    <a href="{% url 'auth:edit' %}">
+                        {{ user.first_name|default:'Пользователь' }}
+                    </a>
+                </li>{% endcomment %}
+            {% endif %}
+            <li>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'auth:logout' %}">выйти</a>
+                {% else %}
+                    <a href="{% url 'auth:login' %}">войти</a>
+                {% endif %}
+            </li>
+
         </ul>
     </div>
 </div>
