--- a/mainapp/templates/product_1420.html
+++ b/mainapp/templates/product_1420.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <hr>
-    {% include "includes/inc_components_menu.html" %}
+    {% include "includes/inc_product_categories_menu.html" %}
     <hr>
     </div>
     <div>
@@ -15,7 +15,7 @@
         <h1>Базовая станция ABB Tropos 1420</h1>
         <div class="product_image">
             <a href={% static "/mainapp/img/tropos_6420.jpg" %} target="_blank">
-                <img src={% static "/mainapp/img/tropos-1420-mesh-router.jpg" %} alt="ABB Tropos 1420" title="ABB Tropos
+                <img src={% static "/mainapp/img/../../media/products_images/Tropos_1420.jpg" %} alt="ABB Tropos 1420" title="ABB Tropos
                 1420"></a>
         </div>
         <div class="product_button">
