--- a/mainapp/templates/product_6420.html
+++ b/mainapp/templates/product_6420.html
@@ -6,7 +6,9 @@
 {% endblock %}
 
 {% block content %}
-
+    <hr>
+    {% include "includes/inc_product_categories_menu.html" %}
+    <hr>
 
     <div>
         <hr>
