--- a/mainapp/templates/includes/inc_menu.html
+++ b/mainapp/templates/includes/inc_menu.html
@@ -3,7 +3,7 @@
         <img src="/static/mainapp/img/logo.png" width="60px" alt="logo">
         <ul class="menu">
             <li><a href={% url 'main' %}>Главная</a></li>
-            <li><a href={% url 'products' %}>Каталог</a></li>
+            <li><a href={% url 'products:index' %}>Каталог</a></li>
             <li><a href={% url 'contacts' %}>Контакты</a></li>
             {% if user.is_authenticated %}
                {% comment %} <li>
