--- a/mainapp/templates/product_4310.html
+++ b/mainapp/templates/product_4310.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <hr>
-    {% include "includes/inc_components_menu.html" %}
+    {% include "includes/inc_product_categories_menu.html" %}
     <hr>
     <div>
         <hr>
@@ -15,8 +15,8 @@
         <hr>
         <h3>ABB TropOS 4310-XA Mobile Mesh Router</h3>
         <div class="product_image">
-            <a href={% static "/mainapp/img/router-4310-mesh.jpg" %} target="_blank">
-                <img src={% static "/mainapp/img/router-4310-mesh.jpg" %} alt="ABB Tropos 4310" title="ABB Tropos 4310"></a>
+            <a href={% static "/mainapp/img/../../media/products_images/Tropos_4310.jpg" %} target="_blank">
+                <img src={% static "/mainapp/img/../../media/products_images/Tropos_4310.jpg" %} alt="ABB Tropos 4310" title="ABB Tropos 4310"></a>
         </div>
         <div class="product_button">
             <input type="button" value="Купить">
