--- a/mainapp/templates/product.html
+++ b/mainapp/templates/product.html
@@ -2,50 +2,25 @@
 {% load staticfiles %}
 
 {% block content %}
-  <div class="details">
-    <div class="links clearfix">
-      {% include 'includes/inc_menu.html' %}
+{#    {% include "includes/inc_basketslot_info.html" %}#}
+    <div>
+            <img src="/media/{{ product.image }}" alt="{{product.short_desc}}" title="{{ product.name }}">
     </div>
 
-    <div class="details-products">
-      <div class="details-slider">
-        <div class="slider-product">
-          <img src="/media/{{ product.image }}"
-               alt="{{ product.short_desc }}">
-        </div>
-        <div class="slider-control">
-          <div class="block">
-            <a href="#">
-              <img src="/media/{{ product.image }}" alt="вариант 1">
-            </a>
-          </div>
-          <div class="block">
-            <a href="#">
-              <img src="/media/{{ product.image }}" alt="вариант 2">
-            </a>
-          </div>
-          <div class="block">
-            <a href="#">
-              <img src="/media/{{ product.image }}" alt="вариант 3">
-            </a>
-          </div>
-        </div>
-      </div>
 
-      <div class="description">
-        <h3 class="big-bold">{{ product.name }}</h3>
-        <br>
-        <p class="price"> {{ product.price }} <span>руб</span></p>
-        <a href="{% url 'basket:add' product.pk %}" class="red-button">
-          заказать
-          <i class="fa fa-chevron-right" aria-hidden="true"></i>
-        </a>
-        <div class="description-text">
-          {{ product.description }}
-        </div>
-      </div>
+    <h3>{{ product.name }}</h3>
+    <ul style="list-style: none">
+        <li>{{ product.price }}</li>
+        <li>
+            <button><a href="{% url 'basket:add' product.pk %}">Добавить в корзину</a></button>
+        </li>
+
+        <li>
+            <button><a href="{% url 'basket:remove' product.pk %}">Удалить из корзины</a></button>
+        </li>
+    </ul>
+    <div>
+        {{ product.description }}
     </div>
 
-  </div>
-
-  <div class="clr"></div>
+{% endblock %}
