--- a/adminapp/templates/adm_product.html
+++ b/adminapp/templates/adm_product.html
@@ -14,8 +14,8 @@
     <p>{{ object.short_desc }}</p>
     <a href="{% url 'admin_custom:product_update' object.pk %}">Редактировать</a>
     <br>
-{#    <a href="{% url 'admin_custom:product_delete' object.pk %}">Удалить</a>#}
+    <a href="{% url 'admin_custom:product_delete' object.pk %}">Удалить</a>
     <br>
     <br>
-{#    <a href="{% url 'admin_custom:products' %}"> <-- Ко всем продуктам</a>#}
+    <a href="{% url 'admin_custom:products' %}"> <-- Ко всем продуктам</a>
 {% endblock %}
