--- a/adminapp/templates/product_delete.html
+++ b/adminapp/templates/product_delete.html
@@ -4,7 +4,7 @@
 
 
 {% block title %}
-    <title>{{ title }}</title>
+    <title>Удаление {{ object.name }}</title>
 {% endblock %}
 
 {% block content %}
