--- a/adminapp/templates/adm_user_overview.html
+++ b/adminapp/templates/adm_user_overview.html
@@ -10,21 +10,23 @@
 {% block content %}
 
     <h1>Профиль пользователя {{ object.username }}</h1>
-{#    <img width="200" src='/media/{{ object.image }}/'>#}
-    <p>{{ object.username }}</p>
+    <img width="200" src='/media/{{ object.avatar }}/'>
+    <br>
+    <hr>
+    <p>Username: {{ object.username }}</p>
     <p>Имя: {{ object.first_name }}</p>
     <p>Фамилия: {{ object.last_name }}</p>
     <p>Дата регистрации: {{ object.date_joined }}</p>
     <p>Возраст: {{ object.age }}</p>
     <p>Статус: {{ object.is_active }}</p>
-    <p>SuperUser: {{ object.is_active }}</p>
-    <p>email: {{ object.is_active }}</p>
+    <p>SuperUser: {{ object.is_superuser }}</p>
+    <p>email: {{ object.email }}</p>
 
-
-{#    <a href="{% url 'admin_custom:product_update' object.pk %}">Редактировать</a>#}
-    <br>
-{#    <a href="{% url 'admin_custom:product_delete' object.pk %}">Удалить</a>#}
-    <br>
-    <br>
-{#    <a href="{% url 'admin_custom:products' %}"> <-- Ко всем продуктам</a>#}
+    <div>
+        <button><a href="{% url 'admin_custom:user_update' object.pk %}" style="text-decoration: none">Редактировать</a>
+        </button>
+        <br>
+        <br>
+        <a href="{% url 'admin_custom:users' %}"> <-- К списку пользователей</a>
+    </div>
 {% endblock %}
