--- a/adminapp/templates/adminapp_base.html
+++ b/adminapp/templates/adminapp_base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
+{% load staticfiles %}
+
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -7,15 +9,26 @@
     {% endblock %}
 
     {% block css %}
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+{#        <link rel="stylesheet" href={% static '/mainapp/css/style.css' %}>#}
     {% endblock %}
 
-    <link rel="stylesheet" href={% static '/mainapp/css/style.css' %}>
 
 </head>
 
+
 <body>
-{% block content %}
-{% endblock %}
+<div class="container">
+    <div class="login">
+        <div class="h2 text-center head">
+            {{ title }}
+        </div>
+
+        {% block content %}
+
+        {% endblock %}
+    </div>
+</div>
 
 {% block js %}
 {% endblock %}
