--- a/adminapp/templates/user_delete.html
+++ b/adminapp/templates/user_delete.html
@@ -4,18 +4,18 @@
 
 
 {% block title %}
-    <title>Удаление товара {{ object.name }}</title>
+    <title>Удаление пользователя {{ object.username }}</title>
 {% endblock %}
 
 {% block content %}
     <div class="user_delete">
-        Уверены, что хотите удалить товар "{{ object.name }}"?
+        Уверены, что хотите удалить пользователя "{{ object.username }}"?
         <form method="post">
             {% csrf_token %}
             <input class="btn btn-danger" type="submit" value="удалить">
         </form>
         <button class="btn btn-success">
-            <a href="{% url 'admin_custom:products' %}">
+            <a href="{% url 'admin_custom:users' %}">
                 Отмена
             </a>
         </button>
