--- a/authapp/templates/authapp/verification_error.html
+++ b/authapp/templates/authapp/verification_error.html
@@ -3,5 +3,11 @@
 
 
 {% block content %}
-    <div>При активации аккаунта возникла проблема</div>
+        <form action="{% url 'auth:register' %}">
+        <br>
+        <div class="h4 text-center head">При активации что-то пошло не так =(</div>
+        <div class="text-center head">Пользователя {{ email }} не существует, либо ссылка активаци не актуальна</div>
+        <br>
+        <button class="form-control" >Пройти регистрацию заново</button>
+    </form>
 {% endblock %}
