--- a/authapp/templates/authapp/verification_ok.html
+++ b/authapp/templates/authapp/verification_ok.html
@@ -3,5 +3,10 @@
 
 
 {% block content %}
-    <div>Ваш аккаунт активирован!</div>
+    <form action="{% url 'main' %}">
+        <br>
+        <div class="h4 text-center head">аккаунт {{ email }} активирован!</div>
+        <br>
+        <button class="form-control" >Ок</button>
+    </form>
 {% endblock %}
