--- a/authapp/templates/authapp/verification_error.html
+++ b/authapp/templates/authapp/verification_error.html
@@ -8,6 +8,6 @@
         <div class="h4 text-center head">При активации что-то пошло не так =(</div>
         <div class="text-center head">Пользователя {{ email }} не существует, либо ссылка активаци не актуальна</div>
         <br>
-        <button class="form-control" >Пройти регистрацию заново</button>
+        <button class="form-control btn-warning" >Пройти регистрацию заново</button>
     </form>
 {% endblock %}
