--- a/authapp/templates/authapp/verification_ok.html
+++ b/authapp/templates/authapp/verification_ok.html
@@ -7,6 +7,6 @@
         <br>
         <div class="h4 text-center head">аккаунт {{ email }} активирован!</div>
         <br>
-        <button class="form-control" >Ок</button>
+        <button class="form-control btn-success" >Ок</button>
     </form>
 {% endblock %}
