--- a/mainapp/templates/product_6420.html
+++ b/mainapp/templates/product_6420.html
@@ -15,8 +15,8 @@
         <h1>Маршрутизатор Wi-Fi промышлeнный ABB Tropos 6420 </h1>
     </div>
     <div class="product_image">
-        <a href={% static "/mainapp/img/tropos_6420.jpg"%} target="_blank">
-            <img src={% static "/mainapp/img/tropos_6420.jpg"%} alt="ABB Tropos 6420" title="ABB Tropos 6420"></a>
+        <a href="/media/products_images/Tropos_6420.png" target="_blank">
+            <img src="/media/products_images/Tropos_6420.png" alt="ABB Tropos 6420" title="ABB Tropos 6420"></a>
     </div>
     <div class="product_button">
         <input type="button" value="Купить">
