--- a/mainapp/templates/includes/inc_menu.html
+++ b/mainapp/templates/includes/inc_menu.html
@@ -5,6 +5,11 @@
             <li><a href={% url 'main' %}>Главная</a></li>
             <li><a href={% url 'products:index' %}>Каталог</a></li>
             <li><a href={% url 'contacts' %}>Контакты</a></li>
+            <li>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'auth:edit' %}">{{ username }}</a>
+                {% endif %}
+            </li>
             <li><a href={% url 'basket:read' %}>Корзина</a></li>
 
             {% if user.is_authenticated %}
