--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -7,22 +7,30 @@
     {% endblock %}
 
     {% block css %}
-    {% endblock %}
+       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+{#       <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">#}
+        <link rel="stylesheet" href={% static '/mainapp/css/style.css' %}>
 
-    <link rel="stylesheet" href={% static '/mainapp/css/style.css' %}>
+
+{#       <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">#}
+   {% endblock %}
 
 </head>
 <body>
 
 
-{% include 'includes/inc_menu.html' %}
+    {% include 'includes/inc_menu.html' %}
 
-{% block content %}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
 
-{% block js %}
-{% endblock %}
+    {% block js %}
+        <script src="{% static 'js/umd/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/umd/popper.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    {% endblock %}
 
-{% include 'includes/inc_footer.html' %}
+    {% include 'includes/inc_footer.html' %}
 </body>
 </html>
