--- a/mainapp/templates/includes/inc_menu.html
+++ b/mainapp/templates/includes/inc_menu.html
@@ -1,16 +1,43 @@
 <div class=container>
+
     <div class="header">
         <img src="/static/mainapp/img/logo.png" width="60px" alt="logo">
         <ul class="menu">
             <li><a href={% url 'main' %}>Главная</a></li>
             <li><a href={% url 'products:index' %}>Каталог</a></li>
             <li><a href={% url 'contacts' %}>Контакты</a></li>
-            <li>
-                {% if user.is_authenticated %}
-                    <a href="{% url 'auth:edit' %}">{{ username }}</a>
-                {% endif %}
-            </li>
-            <li><a href={% url 'basket:read' %}>Корзина</a></li>
+            {% if user.is_authenticated %}
+                <li>
+                    <div class="dropdown">
+                        <a class="dropdown-toggle" href="" data-toggle="dropdown">
+                            {{ user.first_name|default:'Пользователь' }}
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="{% url 'auth:edit' %}">профиль</a>
+                            </li>
+                            <li>
+    {#                            <a href="{% url 'ordersapp:orders_list' %}">#}
+                                <a href="{% url 'orders:order_list' %}">
+                               заказы
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+            {% endif %}
+            {% if user.is_superuser %}
+                <li>
+                    <a href="{% url 'admin:users' %}">админка</a>
+                </li>
+            {% endif %}
+
+
+
+
+{#                {% endif %}#}
+{#            <li><a href={% url 'basket:read' %}>Корзина</a></li>#}
 
 {#            {% if user.is_authenticated %}#}
 {#               {% comment %} <li>#}
