версия залитая на сервер

--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
 {% block title %}
     <title>Магазин оборудования</title>
 {% endblock %}
@@ -38,7 +39,7 @@
             <hr>
             <!-- Комментарий -->
             <h2></h2>
-            <img src={% static '/mainapp/img/ABBTropos.jpg' %}>
+            <img src='/media/img/ABBTropos.jpg'>
             <p><i><b>Приветственное сообщение на странице магазина</b></i><br> Lorem ipsum dolor sit amet, consectetur
                 adipisicing elit. Unde, dignissimos!</p>
             <hr>
