--- a/static/css/style.css
+++ b/static/css/style.css
@@ -167,7 +167,7 @@ li {
 
 
 .feature_description li {
-    list-style-image: url(../img/tasks.png);
+    list-style-image: url(../../media/img/tasks.png);
 
 }
 
