изменил код страницы

--- a/mainapp/templates/includes/inc_footer.html
+++ b/mainapp/templates/includes/inc_footer.html
@@ -1,5 +1,47 @@
-<div class=footer>
-    <footer>
-        <p>&copy; Все права защищены </p>
-    </footer>
-</div>
+{#<div class=footer>#}
+{#    <footer>#}
+{#        <p>&copy; Все права защищены </p>#}
+{#    </footer>#}
+{#</div>#}
+<footer>
+    <div class="footer">
+        <div class="contact">
+            <div class="contact_us">contact us</div>
+            <div class="contact_info">132A Bridge Road Richmond VIC
+                Australia.<br><br>Talk to us on 1300 132
+                info@interior.com
+            </div>
+        </div>
+        <div class="useful">
+            <div class="useful_information">Useful Information</div>
+            <ul class="usefull_menu_l">
+                <li><a href="#" class="usefull_menu-link">Sales info</a></li>
+                <li><a href="#" class="usefull_menu-link">Customer care</a></li>
+                <li><a href="#" class="usefull_menu-link">delivery</a></li>
+
+            </ul>
+            <ul class="usefull_menu_r">
+                <li><a href="#" class="usefull_menu-link">architect accounts</a></li>
+                <li><a href="#" class="usefull_menu-link">careers</a></li>
+                <li><a href="#" class="usefull_menu-link">exchanges return</a></li>
+            </ul>
+        </div>
+        <div class="in_touch">
+            <div class="lets_stay_in_touth">Let’s Stay in Touch!</div>
+            <div class="in_touth_text">Suscribe to know about our latest news, products and special offers just for
+                suscribers.
+            </div>
+            <form class="in_touth_email">
+                <input type="text" class="in_touth_email_input" value="your email address">
+                <button type="submit" class="in_touth_email_button"></button>
+            </form>
+
+
+        </div>
+        <div class="copyright">&copy; Copyright - INTERIOR 2016. All Rights Reserved.
+        </div>
+        <div class="social"><a href="#"><img src="/media/img/social-links.png" alt=""></a>
+        </div>
+        <div class="terms">Terms & Conditions / Privacy policy & Cookies</div>
+    </div>
+</footer>
