--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -3,20 +3,24 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% block title %}
     {% endblock %}
 
     {% block css %}
-       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-{#       <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">#}
-        <link rel="stylesheet" href={% static 'css/style.css' %}>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+        {#        <link rel="stylesheet" href={% static 'css/styles_old.css' %}>#}
+        <link rel="stylesheet" href={% static 'css/style_2.css' %}>
 
 
-{#       <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">#}
-   {% endblock %}
+        <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/fontawesome.css' %}">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap" rel="stylesheet">
+        {#       <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/fontawesome-4.5.0.min.css' %}">#}
+    {% endblock %}
 
 </head>
 <body>
+<div class=container>
 
 
     {% include 'includes/inc_menu.html' %}
@@ -30,7 +34,11 @@
         <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% endblock %}
-
+    <div class="clr"></div>
     {% include 'includes/inc_footer.html' %}
+</div>
 </body>
+
+
+
 </html>
