--- a/mainapp/templates/includes/inc_menu.html
+++ b/mainapp/templates/includes/inc_menu.html
@@ -1,25 +1,25 @@
-<div class=container>
 
-    <div class="header">
-        <img src="/media/img/logo.png" width="60px" alt="logo">
-        <ul class="menu">
-            <li><a href={% url 'main' %}>Главная</a></li>
-            <li><a href={% url 'products:index' %}>Каталог</a></li>
-            <li><a href={% url 'contacts' %}>Контакты</a></li>
+    <div class="header clearfix">
+
+        <a href="#"><img src="/media/img/logo_3.png" width="80" alt="logo"></a>
+        <ul class="menu clearfix">
+            <li class="menu-list"><a class="menu-link" href={% url 'main' %} >Главная</a></li>
+            <li class="menu-list"><a class="menu-link" href={% url 'products:index' %}>Каталог</a></li>
+            <li class="menu-list"><a class="menu-link" href={% url 'contacts' %}>Контакты</a></li>
             {% if user.is_authenticated %}
-                <li>
+                <li class="menu-list">
                     <div class="dropdown">
-                        <a class="dropdown-toggle" href="" data-toggle="dropdown">
+                        <a class="menu-link dropdown-toggle" href="" data-toggle="dropdown">
                             {{ user.first_name|default:'Пользователь' }}
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>
-                                <a href="{% url 'auth:edit' %}">профиль</a>
+                            <li class="menu-list">
+                                <a class="menu-link" href="{% url 'auth:edit' %}">профиль</a>
                             </li>
-                            <li>
+                            <li class="menu-list">
     {#                            <a href="{% url 'ordersapp:orders_list' %}">#}
-                                <a href="{% url 'orders:order_list' %}">
+                                <a class="menu-link" href="{% url 'orders:order_list' %}">
                                заказы
                                 </a>
                             </li>
@@ -28,8 +28,8 @@
                 </li>
             {% endif %}
             {% if user.is_superuser %}
-                <li>
-                    <a href="{% url 'adminapp:users' %}">админка</a>
+                <li class="menu-list">
+                    <a class="menu-link" href="{% url 'adminapp:users' %}">админка</a>
                 </li>
             {% endif %}
 
@@ -46,14 +46,14 @@
 {#                    </a>#}
 {#                </li>{% endcomment %}#}
 {#            {% endif %}#}
-            <li>
+            <i class="fas fa-sign-in-alt"></i><li class="menu-list">
+                <i class="fas fa-sign-in-alt"></i>
                 {% if user.is_authenticated %}
-                    <a href="{% url 'auth:logout' %}">выйти</a>
+                    <i class="fa fa-sign-in"></i><a class="menu-link" href="{% url 'auth:logout' %}">выйти</a>
                 {% else %}
-                    <a href="{% url 'auth:login' %}">войти</a>
+                    <a class="menu-link " href="{% url 'auth:login' %}">войти</a>
                 {% endif %}
             </li>
 
         </ul>
     </div>
-</div>
